adjusted help popout and updated header and footer

--- a/news21national/templates/n21alpha/core/profile.html
+++ b/news21national/templates/n21alpha/core/profile.html
@@ -59,7 +59,7 @@
 
 		$("a.helptip").parent(".formHint").click(function() {
 			var hid = $(this).attr('id');
-			window.open('/help#profile_'+hid.replace('hint_id_',''), '_blank');
+			window.open('/docs#profile_'+hid.replace('hint_id_',''), '_blank');
 		});
 
     });
