updated help links and form wrapper

--- a/news21national/templates/n21alpha/multimedia/embed.html
+++ b/news21national/templates/n21alpha/multimedia/embed.html
@@ -136,7 +136,7 @@
 		{% endcomment %}
 		$("a.helptip").parent(".formHint").click(function() {
 			var hid = $(this).attr('id');
-			window.open('/help#embed_'+hid.replace('hint_id_',''), '_blank');
+			window.open('/docs#embed_'+hid.replace('hint_id_',''), '_blank');
 		});
 
     });
