--- a/news21national/templates/n21alpha/story/story.html
+++ b/news21national/templates/n21alpha/story/story.html
@@ -383,6 +383,6 @@
 	
 	$("a.helptip").parent(".formHint").click(function() {
 		var hid = $(this).attr('id');
-		window.open('/help#metastory_'+hid.replace('hint_id_',''), '_blank');
+		window.open('/docs#metastory_'+hid.replace('hint_id_',''), '_blank');
 	});
 {% endblock %}
